--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "mongoose": "^8.3.4",
+    "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
