--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
     "dev": "nodemon --env-file=.env app"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^8.3.4",
     "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
