--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "emirhan",
+  "version": "1.0.0",
+  "description": "Mern JobMonitor",
+  "main": "app.js",
+  "license": "MIT",
   "scripts": {
     "start": "node app",
     "dev": "nodemon --env-file=.env app"
@@ -16,11 +21,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "globals": "^15.2.0",
     "nodemon": "^3.1.0"
-  },
-  "name": "emirhan",
-  "version": "1.0.0",
-  "description": "Mern JobMonitor",
-  "main": "app.js",
-  "license": "MIT"
+  }
 }
