--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb+srv://<user>:<password>@cluster0.ui1t4xu.mongodb.net/CompanyDB?retryWrites=true&w=majority&appName=Cluster0
+ACCESS_TOKEN_SECRET=
+ACCESS_TOKEN_SECRET=
