--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "mongoose-sequence": "^6.0.1",
     "uuid": "^9.0.1"
